tests/paczka1/small_fuzzy/11142976.err
Error in line 5: iJz A634 194,3
Error in line 9: bFTD8 S)74 69,1
Error in line 8: bFTD8 S574 65,4
